// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`keyframes keyframes with interpolation 1`] = `
.glamor-1 {
  -webkit-animation: animation-1q8eu9e 2s linear infinite;
  animation: animation-1q8eu9e 2s linear infinite;
}

<h1
  className="glamor-0 glamor-1"
>
  hello world
</h1>
`;

exports[`keyframes keyframes with interpolation 2`] = `
"@-webkit-keyframes animation-1q8eu9e {
  from {
    -webkit-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

@keyframes animation-1q8eu9e {
  from {
    -webkit-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.css-l8b5qg {
  -webkit-animation: animation-1q8eu9e 2s linear infinite;
  animation: animation-1q8eu9e 2s linear infinite;
}"
`;

exports[`keyframes renders 1`] = `
.glamor-1 {
  -webkit-animation: animation-16qlhaj 2s linear infinite;
  animation: animation-16qlhaj 2s linear infinite;
}

<h1
  className="glamor-0 glamor-1"
>
  hello world
</h1>
`;

exports[`keyframes renders 2`] = `
"@-webkit-keyframes animation-16qlhaj {
  from, 20%, 53%, 80%, to {
    -webkit-animation-timing-function: cubic-bezier(0.215,0.610,0.355,1.000);
    animation-timing-function: cubic-bezier(0.215,0.610,0.355,1.000);
    -webkit-transform: translate3d(0,0,0);
    -ms-transform: translate3d(0,0,0);
    transform: translate3d(0,0,0);
  }

  40%, 43% {
    -webkit-animation-timing-function: cubic-bezier(0.755,0.050,0.855,0.060);
    animation-timing-function: cubic-bezier(0.755,0.050,0.855,0.060);
    -webkit-transform: translate3d(0,-30px,0);
    -ms-transform: translate3d(0,-30px,0);
    transform: translate3d(0,-30px,0);
  }

  70% {
    -webkit-animation-timing-function: cubic-bezier(0.755,0.050,0.855,0.060);
    animation-timing-function: cubic-bezier(0.755,0.050,0.855,0.060);
    -webkit-transform: translate3d(0,-15px,0);
    -ms-transform: translate3d(0,-15px,0);
    transform: translate3d(0,-15px,0);
  }

  90% {
    -webkit-transform: translate3d(0,-4px,0);
    -ms-transform: translate3d(0,-4px,0);
    transform: translate3d(0,-4px,0);
  }
}

@keyframes animation-16qlhaj {
  from, 20%, 53%, 80%, to {
    -webkit-animation-timing-function: cubic-bezier(0.215,0.610,0.355,1.000);
    animation-timing-function: cubic-bezier(0.215,0.610,0.355,1.000);
    -webkit-transform: translate3d(0,0,0);
    -ms-transform: translate3d(0,0,0);
    transform: translate3d(0,0,0);
  }

  40%, 43% {
    -webkit-animation-timing-function: cubic-bezier(0.755,0.050,0.855,0.060);
    animation-timing-function: cubic-bezier(0.755,0.050,0.855,0.060);
    -webkit-transform: translate3d(0,-30px,0);
    -ms-transform: translate3d(0,-30px,0);
    transform: translate3d(0,-30px,0);
  }

  70% {
    -webkit-animation-timing-function: cubic-bezier(0.755,0.050,0.855,0.060);
    animation-timing-function: cubic-bezier(0.755,0.050,0.855,0.060);
    -webkit-transform: translate3d(0,-15px,0);
    -ms-transform: translate3d(0,-15px,0);
    transform: translate3d(0,-15px,0);
  }

  90% {
    -webkit-transform: translate3d(0,-4px,0);
    -ms-transform: translate3d(0,-4px,0);
    transform: translate3d(0,-4px,0);
  }
}

.css-1qpx6jr {
  -webkit-animation: animation-16qlhaj 2s linear infinite;
  animation: animation-16qlhaj 2s linear infinite;
}"
`;
